Comienza desarrollo de 1.37

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -185,3 +185,6 @@ databaseChangeLog:
     relativeToChangelogFile: true
 
 # Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
+- include:
+    file: incrementales-v1_37.yml
+    relativeToChangelogFile: true
