tg-7109 [DB] Agregar columnas auditables a tabla medical_coverage_plan

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
@@ -101,3 +101,47 @@ databaseChangeLog:
               referencedColumnNames: id
               referencedTableName: medical_coverage
               validate: true
+
+    - changeSet:
+        id: add-auditable-columns-medical_coverage_plan
+        author: mvenere
+        changes:
+          - addColumn:
+              tableName: medical_coverage_plan
+              columns:
+                - column:
+                    constraints:
+                      nullable: false
+                    name: created_by
+                    type: int
+                    defaultValue: -1
+                - column:
+                    constraints:
+                      nullable: false
+                    name: created_on
+                    type: datetime
+                    defaultValueDate: ${date.now}
+                - column:
+                    constraints:
+                      nullable: false
+                    name: updated_by
+                    type: int
+                    defaultValue: -1
+                - column:
+                    constraints:
+                      nullable: false
+                    name: updated_on
+                    type: datetime
+                    defaultValueDate: ${date.now}
+                - column:
+                    constraints:
+                      nullable: false
+                    name: deleted
+                    type: BOOLEAN
+                    defaultValue: ${boolean.false}
+                - column:
+                    name: deleted_by
+                    type: int
+                - column:
+                    name: deleted_on
+                    type: datetime
