tg-7151 [P1] Se muestran los logos de SOMA en HSI

--- a/back-end/booking/src/main/resources/booking.properties
+++ b/back-end/booking/src/main/resources/booking.properties
@@ -1,8 +1,8 @@
 #### EMAIL CONFIGURATION ####
 booking-host=${EMAIL_HOST:c2190721.ferozo.com}
 booking-port=${EMAIL_PORT:465}
-booking-mail-from=${EMAIL_FROM:gesdoctor@lamansys.com}
-booking-password=${EMAIL_PASSWORD:tELE@2021}
+booking-mail-from=${EMAIL_FROM:soma@lamansys.com}
+booking-password=${EMAIL_PASSWORD:92App9sCvx}
 booking-auth=${EMAIL_AUTH:true}
 booking-starttls.enable=${EMAIL_TTLS:true}
 booking-protocol=${EMAIL_PROTOCOL:smtp}
