tg-7112 Los inputs de dni deben descartar los ceros del inicio del valor si lo tuvieran

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
@@ -843,3 +843,15 @@ databaseChangeLog:
                     name: physical_discharge_date
                     type: timestamp
               tableName: patient_discharge
+ 
+    - changeSet:
+        id: upate-identification_number-with-zeros
+        comment: Edita documentos existentes ingresados con ceros a la izquierda.
+        author: bchacon
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE person
+                SET identification_number = TRIM('0' FROM identification_number)
+                WHERE identification_number LIKE '0%'
