Comienza desarrollo de 1.38

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -188,3 +188,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_37.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_38.yml
+    relativeToChangelogFile: true
