tg-7274 Unifica configuración del servidor de envío de mails

--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -62,3 +62,17 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 
 
 app.system.properties.cron.config=0 0/10 * * * *
+
+# =============== EMAIL =================
+app.notification.mail.from=hsi@pladema.net
+app.notification.mail.fromFullname=HSI
+
+spring.mail.host=${SMTP_HOST:}
+spring.mail.port=${SMTP_PORT:}
+spring.mail.username=${SMTP_USERNAME:}
+spring.mail.password=${SMTP_PASS:}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.transport.protocol=smtp
