tg-7315 [Fix] Actualiza URL del servicio federar para evitar error 500 durante el despliegue de la aplicacion
(cherry picked from commit 52eabc5ad57e0eedc78ef1f3a75f8edc751665e8)

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -31,7 +31,7 @@ ws.renaper.enabled=${ENABLE_RENAPER:false}
 
 # Federar
 ws.federar.enabled=${ENABLE_FEDERAR:false}
-ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
+ws.federar.url.base=https://bus-test.msal.gob.ar
 ws.federar.sisaCode=10002001110000
 ws.federar.claims.iss=http://www.msal.gov.ar
 ws.federar.claims.sub=Ministerio de Salud de la Nación
