tg-7315 [Fix] Actualiza URL del servicio federar para evitar error 500 durante el despliegue de la aplicacion

--- a/back-end/app/src/test/resources/integration-test.properties
+++ b/back-end/app/src/test/resources/integration-test.properties
@@ -54,7 +54,7 @@ actuator.configuration.whitelist=${ACTUATOR_WHITELIST:}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
 #========= FEDERAR ==========#
-ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
+ws.federar.url.base=https://bus-test.msal.gob.ar
 
 # ===============================
 # reCaptcha Google
@@ -69,6 +69,5 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 app.feature.HABILITAR_REPORTE_EPIDEMIOLOGICO=false
 ws.sisa.snvs.enabled=false
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
-ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
 
 logging.level.root=WARN
