tg-7386 [P1] Fix script de dni con ceros al inicio

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_38.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_38.yml
@@ -91,6 +91,17 @@ databaseChangeLog:
                     INNER JOIN person p2 ON hp.person_id = p2.id
                     WHERE a.appointment_state_id = 6)
 
+    - changeSet:
+        id: upate-identification_number-with-zeros
+        comment: Edita documentos existentes ingresados con ceros a la izquierda.
+        author: bchacon
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE person
+                SET identification_number = TRIM('0' FROM identification_number)
+                WHERE identification_number LIKE '0%'
 
 
 
