tg-7454 [BD] Quitar null constraint de categorias de camas

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -91,3 +91,13 @@ databaseChangeLog:
               JOIN clinical_specialty_sector css 
               ON doff.clinical_specialty_sector_id = css.id
               WHERE doctors_office_id = doff.id
+    
+    - changeSet:
+        id: dropNotNullConstraint-bed_category_id
+        author: mvenere
+        changes:
+          - dropNotNullConstraint:
+              columnDataType: smallint
+              columnName: bed_category_id
+              tableName: bed
+              validate: true
