Comienza desarrollo de 1.39

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -192,3 +192,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_38.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_39.yml
+    relativeToChangelogFile: true
