tg-7377 Fix permisos en tabla de referencias

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -61,3 +61,5 @@ habilitar.boton.consulta=true
 #spring.mail.username=postmaster@sandbox7e2b48a345fc44e39ccf56f6ce2a5a34.mailgun.org
 #spring.mail.password=8c51b8aca9e1b59203eaaf5f11bf4883-100b5c8d-997441e7
 #spring.mail.port=587
+
+#logging.level.ar.lamansys.sgx.shared.restclient=DEBUG
