tg-7476 Asociar especialidad con la agenda

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -87,5 +87,7 @@ databaseChangeLog:
         changes:
           - sql: |-
               UPDATE diary SET clinical_specialty_id = css.clinical_specialty_id 
-              FROM doctors_office dro, clinical_specialty_sector css 
-              WHERE doctors_office_id = dro.id AND dro.clinical_specialty_sector_id = css.id
+              FROM doctors_office doff
+              JOIN clinical_specialty_sector css 
+              ON doff.clinical_specialty_sector_id = css.id
+              WHERE doctors_office_id = doff.id
