--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_39.yml
@@ -139,3 +139,154 @@ databaseChangeLog:
               referencedColumnNames: id
               referencedTableName: sector
               validate: true
+
+    - changeSet:
+        id: add_to_doctors_office_sector_id
+        comment: Se agrega la columna sector_id al consultorio
+        author: mmalyarni
+        changes:
+          - addColumn:
+              tableName: doctors_office
+              columns:
+                - column:
+                    constraints:
+                      foreignKeyName: FK_doctors_office_sector_id
+                      references: sector(id)
+                    name: sector_id
+                    type: int
+
+    - changeSet:
+        id: update_doctor_office_sector_id
+        comment: Se establece el id del sector del consultorio en base a su especialidad|sector
+        author: mmalyvarni
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE doctors_office
+                SET sector_id = sect.id
+                FROM sector sect
+                JOIN clinical_specialty_sector css
+                ON sect.id = css.sector_id
+                WHERE doctors_office.clinical_specialty_sector_id = css.id
+
+    - changeSet:
+        id: update_view_v_appointment_summary
+        comment: Se actualiza la vista v_appointment_summary teniendo en cuenta la nueva localizacion de la especializacion clinica
+        author: mmalyvarni
+        changes:
+          - createView:
+              viewName: v_appointment_summary
+              fullDefinition: false
+              replaceIfExists: true
+              selectQuery: |-
+                (SELECT a.id,
+                      a.date_type_id,
+                      a.hour,
+                      a.appointment_state_id,
+                      ass.description AS status_description,
+                      a.is_overturn,
+                      a.phone_number,
+                      a.phone_prefix,
+                      a.patient_id,
+                      p1.first_name            AS patient_first_name,
+                      p1.last_name             AS patient_last_name,
+                      p1.identification_number AS patient_identification_number,
+                      p1.gender_id             AS patient_gender_id,
+                      hp.license_number,
+                      p2.first_name            AS doctor_name,
+                      p2.last_name             AS doctor_last_name,
+                      P2.identification_number AS doctor_identification_number,
+                      mc.name AS medical_coverage_name,
+                      mc.cuit,
+                      pmc.affiliate_number,
+                      cs.sctid_code,
+                      cs.name AS clinical_specialty_name,
+                      doff.institution_id,
+                      i.cuit                   AS institution_cuit,
+                      i.sisa_code
+                FROM appointment AS a
+                INNER JOIN appointment_state ass on a.appointment_state_id = ass.id
+                INNER JOIN appointment_assn aa on aa.appointment_id = a.id
+                INNER JOIN patient pa1 on a.patient_id = pa1.id
+                INNER JOIN person p1 ON pa1.person_id = p1.id
+                INNER JOIN diary d ON aa.diary_id = d.id
+                INNER JOIN doctors_office doff ON d.doctors_office_id = doff.id
+                INNER JOIN institution i ON doff.institution_id = i.id
+                INNER JOIN clinical_specialty cs ON d.clinical_specialty_id = cs.id
+                INNER JOIN healthcare_professional hp ON d.healthcare_professional_id = hp.id
+                INNER JOIN person p2 ON hp.person_id = p2.id
+                INNER JOIN patient_medical_coverage AS pmc ON a.patient_medical_coverage_id = pmc.id
+                INNER JOIN medical_coverage mc ON pmc.medical_coverage_id = mc.id
+                WHERE a.appointment_state_id != 6)
+                UNION ALL
+                (SELECT a.id,
+                      a.date_type_id,
+                      a.hour,
+                      a.appointment_state_id ,
+                      ass.description AS status_description,
+                      a.is_overturn,
+                      a.phone_number,
+                      a.phone_prefix,
+                      a.patient_id,
+                      bp.first_name            AS patient_first_name,
+                      bp.last_name             AS patient_last_name,
+                      bp.identification_number AS patient_identification_number,
+                      bp.gender_id             AS patient_gender_id,
+                      hp.license_number,
+                      p2.first_name            AS doctor_name,
+                      p2.last_name             AS doctor_last_name,
+                      P2.identification_number AS doctor_identification_number,
+                      null AS medical_coverage_name,
+                      null AS cuit,
+                      null AS affiliate_number,
+                      cs.sctid_code,
+                      cs.name AS clinical_specialty_name,
+                      doff.institution_id,
+                      i.cuit                   AS institution_cuit,
+                      i.sisa_code
+                FROM appointment AS a
+                INNER JOIN appointment_state ass on a.appointment_state_id = ass.id
+                INNER JOIN appointment_assn aa on aa.appointment_id = a.id
+                INNER JOIN booking_appointment ba on a.id = ba.appointment_id
+                INNER JOIN booking_person bp ON ba.booking_person_id = bp.id
+                INNER JOIN diary d ON aa.diary_id = d.id
+                INNER JOIN doctors_office doff ON d.doctors_office_id = doff.id
+                INNER JOIN institution i ON doff.institution_id = i.id
+                INNER JOIN clinical_specialty cs ON d.clinical_specialty_id = cs.id
+                INNER JOIN healthcare_professional hp ON d.healthcare_professional_id = hp.id
+                INNER JOIN person p2 ON hp.person_id = p2.id
+                WHERE a.appointment_state_id = 6)
+
+    - changeSet:
+        id: dropView-v_booking_doctors_office
+        author: mmalyvarni
+        changes:
+          -  dropView:
+               viewName: v_booking_doctors_office
+
+    - changeSet:
+        id: createView_v_booking_doctors_office_prod
+        comment: Crea la vista v_booking_doctors_office para prod teniendo en cuenta el cambio en la organizacion de los consultorios
+        author: mmalyvarni
+        changes:
+          - createView:
+              viewName: v_booking_doctors_office
+              fullDefinition: false
+              replaceIfExists: true
+              selectQuery: |-
+                SELECT id, institution_id, sector_id,
+                       description, opening_time, closing_time, topic
+                FROM doctors_office
+
+    - changeSet:
+        id: drop_clinical_specialty_sector_id_column_from_doctors_office
+        comment: Se elimina la columna clinical_specialty_sector_id del consultorio
+        author: mmalyvarni
+        changes:
+          - dropForeignKeyConstraint:
+              baseTableName: doctors_office
+              constraintName: FK_doctors_office_clinical_specialty_sector_id
+          - dropColumn:
+              columnName: clinical_specialty_sector_id
+              tableName: doctors_office
